tests/03-typecheck/08-arith.ref
tests/03-typecheck/08-arith.stack:2:5, Semantic error: func + has non matching args, expected (int, int) but got (int, bool)
